# xfce4-copy-bar

./: .gitignore  CMakeLists.txt  README.md
include/: dock.hpp  settings.hpp  xfce4-copy-bar.h  xfce4-copy-bar.hpp
src/: dock.cpp  main.cpp  xfc4-copy-bar.cpp  xfce4-copy-bar.cpp
